# tpl-gen

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  run
cnf/env/: dev.env.json  lde.env.json  prd.env.json  stg.env.json  tst.env.json
lib/bash/funcs/: export-json-section-vars.func.sh  sync-time.func.sh
lib/make/: clean-install-img-func.mk  demand-var.mk  install-img-func.mk  make-help.mk  set-env.mk  start-stop-container.mk  zip-me.mk
src/bash/demo/: demo-dev.sh  demo-lde.sh
src/bash/run/: check-install-poetry.func.sh  check-install-py-modules.func.sh  docker-init-tpl-gen.sh  generate-templates.func.sh  morph-dir.func.sh  print-usage.func.sh  run-pylint-in-python-files.func.sh  run-pylint-in-tpl-gen.func.sh  run-python-tests.func.sh  run.sh
src/bash/run/ubuntu/: run.sh
src/bash/run/ubuntu/ubuntu-20.04.2-lts/: check-install-poetry.func.sh  check-install-python-modules.func.sh  generate-templates.func.sh  morph-dir.func.sh  print-usage.func.sh  run-pylint-in-python-files.func.sh  run-python-tests.func.sh
src/docker/devops/: Dockerfile
src/docker/tpl-gen/: Dockerfile
src/make/: clean-install-imgs.tpl-gen.incl.mk  docker-setup-tasks.tpl-gen.incl.mk  install-imgs.tpl-gen.incl.mk  local-setup-tasks.tpl-gen.incl.mk
src/python/min-jinja/: .gitignore  .pylintrc  poetry.toml  pyproject.toml  pytest.ini  tpl_gen.py
src/python/min-jinja/src/: tpl_gen.py
src/python/min-jinja/tests/: test_tpl_gen.py
src/python/tpl-gen/: .coveragerc  .pylintrc  pyproject.toml  pytest.ini
src/python/tpl-gen/tests/: test_tpl_gen.py
src/python/tpl-gen/tpl_gen/: __init__.py  tpl_gen.py
src/tpl/src/bash/demo/: demo-%env%.sh.tpl
src/tpl/src/bash/demo/%env%/: demo.sh.tpl
