[tool.poetry]
name = "min-jinja"
version = "1.0.0"
description = "A template generator using Jinja2 and Smarty TPL files."
authors = ["Bruno Araujo <araujo.contato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pprintjson = "^1.4.2"
jinja2 = "^3.0.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
autopep8 = "^1.5.7"
pytest = "^6.2.4"
coverage = "^5.5"
pytest-mock = "^3.6.1"
python-dotenv = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
