[tool.poetry]
name = "tpl-gen"
version = "1.0.0"
description = "A template generator using Jinja2 and Smarty TPL files."
authors = ["Yordan Georgiev <yordan.georgiev@csitea.net>", "Bruno Araujo <brunurd@csitea.net>"]
maintainers = ["Yordan Georgiev <yordan.georgiev@csitea.net>", "Bruno Araujo <brunurd@csitea.net>"]

packages = [
    { include = "tpl_gen" },
]

[tool.poetry.dependencies]
python = ">3.8,<3.9"
requests = "^2.25.1"
pprintjson = "^1.4.2"
jinja2 = "^3.0.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
autopep8 = "^1.5.7"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
coverage = "^5.5"

[tool.poetry.scripts]
start = "tpl_gen:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
